--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <header class="sticky top-0 z-50 bg-white shadow-sm">
     <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
       <div class="flex items-center">
-        <a href="#home" class="text-2xl font-bold">
+        <a href="index.html" class="text-2xl font-bold">
           <span class="text-blue-600">Trust</span><span class="text-gray-800">Bank</span>
           <span class="text-blue-600 text-xs align-top">®</span>
         </a>
@@ -124,7 +124,7 @@
               </div>
               <div class="relative">
                 <img
-                  src="https://images.unsplash.com/photo-1554224155-6726b3ff858f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80"
+                  src="../images/hero.avif"
                   alt="Mobile banking app" class="rounded-2xl shadow-2xl border-8 border-white">
               </div>
             </div>
