--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
               </div>
               <div class="relative">
                 <img
-                  src="../images/hero.avif"
+                  src="images/hero.avif"
                   alt="Mobile banking app" class="rounded-2xl shadow-2xl border-8 border-white">
               </div>
             </div>
